# pyqtorch

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  Untitled.ipynb  examples.ipynb  mkdocs.yml  mypy.ini  pyproject.toml  setup.py  to_delete.ipynb  to_delete.py  try_obs_pyq.ipynb  versions.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: lint.yml  publish.yml  run-tests-and-mypy.yml  test.yml  unit_test.yml
.ipynb_checkpoints/: examples-checkpoint.ipynb
docs/: QAOA.ipynb  adjoint.md  analog.md  api.md  apply_gate.md  autograd.ipynb  circuit.md  cuda_debugging.md  differentiation.md  docsutils.py  dropout.md  embed.md  essentials.ipynb  fit_function.ipynb  fitting_a_function.md  gate_composition.ipynb  getting_started.ipynb  getting_started.md  hamevo.md  index.ipynb  index.md  matrices.md  noise.md  parametric.md  pde.md  primitive.md  time_dependent.md  utils.md
docs/deprecated/: QAOA.ipynb  bench.py  fit_function.ipynb  getting_started.ipynb
examples/: QAOA.ipynb  bench.py  dqc.py  ham_evol_comparison.ipynb  module_api.ipynb  new.py  parallel.py  quantum_dropout.py  state_evolution.ipynb
latest/CODE_OF_CONDUCT/: index.html
latest/CONTRIBUTING/: index.html
latest/QAOA/: index.html
latest/apply_gate/: index.html
latest/circuit/: index.html
latest/docsutils/: index.html
latest/essentials/: index.html
latest/fit_function/: index.html
latest/gate_composition/: index.html
latest/hamevo/: index.html
latest/matrices/: index.html
latest/parametric/: index.html
latest/primitive/: index.html
latest/utils/: index.html
pyqtorch/: __init__.py  _version.py  abstract.py  adjoint.py  analog.py  analog_old.py  ansatz.py  api.py  apply.py  bitstrings.py  circuit.py  composite.py  decompose.py  differentiators.py  embed.py  embedding.py  generic_quantum_ops.py  gpsr.py  hamiltonian.py  matrices.py  matrices_sparse.py  measurement.py  modules.py  noise.py  operation.py  operator.py  parametric.py  primitive.py  quantum_operation.py  quantum_ops.py  qubit_support.py  tensors.py  tomo.py  utils.py  utils_distributions.py
pyqtorch/adjoint/: diff_rules.py  expectation.py
pyqtorch/composite/: __init__.py  compose.py  sequence.py
pyqtorch/converters/: store_ops.py  to_qiskit.py
pyqtorch/core/: __init__.py  batched_operation.py  circuit.py  measurement.py  operation.py  utils.py
pyqtorch/differentiation/: __init__.py  adjoint.py  gpsr.py
pyqtorch/hamiltonians/: __init__.py  evolution.py  observable.py
pyqtorch/modules/: __init__.py  abstract.py  adjoint.py  analog.py  circuit.py  composite.py  hamevo.py  matrix.py  ops.py  parametric.py  primitive.py  test.py  utils.py
pyqtorch/noise/: __init__.py  analog.py  digital_gates.py  digital_protocol.py  gates.py  protocol.py  readout.py
pyqtorch/primitives/: __init__.py  mutation_utils.py  parametric.py  parametric_gates.py  primitive.py  primitive_gates.py
pyqtorch/time_dependent/: README  mesolve.py  options.py  sesolve.py  solvers.py
tests/: conftest.py  helpers.py  test_adjoint.py  test_analog.py  test_analytical.py  test_batched_operations.py  test_circuit.py  test_converters.py  test_differentiation.py  test_digital.py  test_dropout.py  test_embedding.py  test_gpsr.py  test_module_hamevo.py  test_modules.py  test_noise.py  test_notebooks.py  test_operations.py  test_operations_hamevo.py  test_readout.py  test_solvers.py  test_speed.py  test_tensor.py  test_utils.py
tests/differentiation/: test_differentiation.py  test_gpsr.py
tests/module/: test_adjoint.py  test_analog.py  test_digital.py
tests/modules/: test_adjoint.py
tests/noise/: test_noise.py  test_readout.py
tests/primitives/: test_circuit.py  test_digital.py  test_mutation.py  test_tensor.py
v0.5.0/CODE_OF_CONDUCT/: index.html
v0.5.0/CONTRIBUTING/: index.html
v0.5.0/QAOA/: index.html
v0.5.0/circuit/: index.html
v0.5.0/essentials/: index.html
v0.5.0/fit_function/: index.html
v0.5.0/gate_composition/: index.html
v0.5.0/hamevo/: index.html
v0.5.0/matrices/: index.html
v0.5.0/parametric/: index.html
v0.5.0/search/: search_index.json
v0.5.1/: 404.html  index.html  objects.inv
v0.5.1/QAOA/: index.html
v0.5.1/apply_gate/: index.html
v0.5.1/circuit/: index.html
v0.5.1/essentials/: index.html
v0.5.1/fit_function/: index.html
v0.5.1/gate_composition/: index.html
v0.5.1/parametric/: index.html
v0.5.1/primitive/: index.html
v0.5.1/search/: search_index.json
v0.5.1/utils/: index.html
v1.0.0/: 404.html  index.html
v1.0.0/CODE_OF_CONDUCT/: index.html
v1.0.0/CONTRIBUTING/: index.html
v1.0.0/docsutils/: index.html
v1.0.0/search/: search_index.json
v1.0.1/: 404.html  index.html
v1.0.1/CODE_OF_CONDUCT/: index.html
v1.0.1/CONTRIBUTING/: index.html
v1.0.1/docsutils/: index.html
v1.0.1/search/: search_index.json
v1.0.2/: 404.html  index.html
v1.0.2/CODE_OF_CONDUCT/: index.html
v1.0.2/CONTRIBUTING/: index.html
v1.0.2/docsutils/: index.html
v1.0.2/search/: search_index.json
v1.0.3/: 404.html  index.html
v1.0.3/CODE_OF_CONDUCT/: index.html
v1.0.4/: 404.html  index.html
v1.0.5/: 404.html  index.html
v1.0.6/: 404.html  index.html
v1.1.0/: 404.html  index.html
v1.1.1/: 404.html  index.html
v1.1.2/: 404.html  index.html
v1.2.0/: 404.html  index.html
v1.2.1/: 404.html  index.html
v1.2.2/: 404.html
v1.2.3/: index.html
v1.2.4/: 404.html
v1.2.5/: index.html
v1.3.0/: 404.html  index.html  objects.inv
v1.3.1/: index.html
v1.3.2/: 404.html  index.html
v1.4.0/: 404.html  index.html
v1.4.1/: 404.html  index.html
v1.4.4/: 404.html  index.html  objects.inv
v1.4.5/: index.html
v1.4.6/: 404.html
v1.4.7/: index.html
v1.4.8/: 404.html
v1.5.0/: 404.html  index.html
v1.5.1/: 404.html  index.html
v1.5.2/: 404.html  index.html
v1.6.0/: 404.html  index.html
v1.7.0/: 404.html  index.html
v1.7.2/: 404.html  index.html
v1.7.3/: 404.html  index.html  objects.inv
v1.7.4/: 404.html  index.html
v1.7.5/: 404.html  index.html
v1.7.6/: 404.html  index.html
v1.7.7/: 404.html
v1.7.8/: index.html
(+373 files in other folders)
