[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyqtorch"
description = "An efficient, large-scale emulator designed for quantum machine learning, seamlessly integrated with a PyTorch backend. Please refer to https://pyqtorch.readthedocs.io/en/latest/ for setup and usage info, along with the full documentation."
authors = [
    { name = "Slimane Thabet", email = "slimane.thabet@pasqal.com" },
    { name = "Aleksander Wennersteen", email = "aleksander.wennersteen@pasqal.com" },
    { name = "Mario Dagrada", email = "mario.dagrada@pasqal.com" },
    { name = "Dominik Seitz", email = "dominik.seitz@pasqal.com" },
    { name = "Niklas Heim", email = "niklas.heim@pasqal.com" },
    { name = "Roland Guichard", email = "roland.guichard@pasqal.com" },
    { name = "Joao P. Moutinho", email = "joao.moutinho@pasqal.com"},
]
requires-python = ">=3.8,<3.12"
license = {text = "Apache 2.0"}
version = "1.0.4"
classifiers=[
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["torch", "numpy"]

[project.optional-dependencies]
dev = ["black", "pytest", "pytest-xdist", "pytest-cov", "flake8", "mypy", "pre-commit", "ruff", "nbconvert", "matplotlib"]

[tool.hatch.envs.tests]
features = [
  "dev",
]

[tool.hatch.envs.tests.scripts]
test = "pytest -n auto {args} && hatch -e docs run mkdocs build --clean --strict"
test-cov = "pytest -n auto --cov=pyqtorch tests/"

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings",
  "mkdocstrings-python",
  "mkdocs-section-index",
  "mkdocs-jupyter",
  "mkdocs-exclude",
  "markdown-exec",
  "mike",
  "matplotlib",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"

[tool.ruff]
select = ["E", "F", "I", "Q"]
extend-ignore = ["F841"]
line-length = 100

[tool.ruff.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.mccabe]
max-complexity = 15

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 100
combine_as_imports = true
balanced_wrapping = true
lines_after_imports = 2
include_trailing_comma = true
multi_line_output = 5

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = false
ignore_missing_imports = true
