[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyqtorch"
description = "An efficient, large-scale emulator designed for quantum machine learning, seamlessly integrated with a PyTorch backend. Please refer to https://pyqtorch.readthedocs.io/en/latest/ for setup and usage info, along with the full documentation."
authors = [
    { name = "Slimane Thabet", email = "slimane.thabet@pasqal.com" },
    { name = "Aleksander Wennersteen", email = "aleksander.wennersteen@pasqal.com" },
    { name = "Mario Dagrada", email = "mario.dagrada@pasqal.com" },
    { name = "Dominik Seitz", email = "dominik.seitz@pasqal.com" },
    { name = "Niklas Heim", email = "niklas.heim@pasqal.com" },
    { name = "Roland Guichard", email = "roland.guichard@pasqal.com" },
    { name = "Joao P. Moutinho", email = "joao.moutinho@pasqal.com"},
    { name = "Vytautas Abramavicius", email = "vytautas.abramavicius@pasqal.com" },
    { name = "Anton Quelle", email = "anton.quelle@pasqal.com" }
]
requires-python = ">=3.8,<3.13"
license = {text = "Apache 2.0"}
version = "1.2.3"
classifiers=[
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["torch", "numpy"]

[project.optional-dependencies]
dev = ["flaky","black", "pytest", "pytest-xdist", "pytest-cov", "flake8", "mypy", "pre-commit", "ruff", "nbconvert", "matplotlib", "qutip~=4.7.5"]

[tool.hatch.envs.tests]
features = [
  "dev",
]

[tool.hatch.envs.tests.scripts]
test = "pytest -n auto {args}"
test-docs = "hatch -e docs run mkdocs build --clean --strict"
test-cov = "pytest -n auto --cov=pyqtorch tests/"

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings",
  "mkdocstrings-python",
  "mkdocs-section-index",
  "mkdocs-jupyter",
  "mkdocs-exclude",
  "markdown-exec",
  "mike",
  "matplotlib",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"

[tool.ruff]
lint.select = ["E", "F", "I", "Q"]
lint.extend-ignore = ["F841"]
line-length = 100

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[lint.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[lint.isort]
line_length = 100
combine_as_imports = true
balanced_wrapping = true
lines_after_imports = 2
include_trailing_comma = true
multi_line_output = 5

[lint.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = false
ignore_missing_imports = true
