[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyqtorch"
description = "An efficient, large-scale emulator designed for quantum machine learning, seamlessly integrated with a PyTorch backend. Please refer to https://pyqtorch.readthedocs.io/en/latest/ for setup and usage info, along with the full documentation."
readme = "README.md"
version = "1.7.3"
requires-python = ">=3.9"
license = { text = "Apache 2.0" }
keywords = ["quantum"]
authors = [
    { name = "Slimane Thabet", email = "slimane.thabet@pasqal.com" },
    { name = "Aleksander Wennersteen", email = "aleksander.wennersteen@pasqal.com" },
    { name = "Mario Dagrada", email = "mario.dagrada@pasqal.com" },
    { name = "Dominik Seitz", email = "dominik.seitz@pasqal.com" },
    { name = "Niklas Heim", email = "niklas.heim@pasqal.com" },
    { name = "Roland Guichard", email = "roland.guichard@pasqal.com" },
    { name = "Joao P. Moutinho", email = "joao.moutinho@pasqal.com"},
    { name = "Vytautas Abramavicius", email = "vytautas.abramavicius@pasqal.com" },
    { name = "Anton Quelle", email = "anton.quelle@pasqal.com" },
    { name = "Charles Moussa", email = "charles.moussa@pasqal.com" },
    { name = "Callum Duffy", email = "callum.duffy@pasqal.com" },
]
classifiers=[
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

# always specify a version for each package
# to maintain consistency
dependencies = [
    "numpy",
    "torch",
]

[tool.hatch.metadata]
allow-direct-references = true
allow-ambiguous-features = true

# add one or more extras in the dependencies
[project.optional-dependencies]
dev = [
    "flaky",
    "black",
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "flake8",
    "mypy",
    "pre-commit",
    "ruff",
    "matplotlib"
]
testlibs = [
    "jax",
    "qutip",
    "jaxlib"
]

[project.urls]
Documentation = "https://pasqal-io.github.io/pyqtorch/latest/"
Issues = "https://github.com/pasqal-io/pyqtorch/-/issues"
Source = "https://github.com/pasqal-io/pyqtorch"

[tool.hatch.envs.tests]
features = [
    "testlibs",
    "dev"
]

[tool.hatch.envs.tests.scripts]
test = "pytest -n auto --cov-report=xml --cov-config=pyproject.toml --cov=pyqtorch --cov=tests {args}"
test-docs = "hatch -e docs run mkdocs build --clean --strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = """-vvv"""
xfail_strict = true
filterwarnings = [
  "ignore:Call to deprecated create function FieldDescriptor",
  "ignore:Call to deprecated create function Descriptor",
  "ignore:Call to deprecated create function EnumDescriptor",
  "ignore:Call to deprecated create function EnumValueDescriptor",
  "ignore:Call to deprecated create function FileDescriptor",
  "ignore:Call to deprecated create function OneofDescriptor",
  "ignore:distutils Version classes are deprecated."
]

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings",
  "mkdocstrings-python",
  "mkdocs-section-index",
  "mkdocs-jupyter",
  "mkdocs-exclude",
  "markdown-exec",
  "mike",
  "matplotlib",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"

[tool.ruff]
lint.select = ["E", "F", "I", "Q"]
lint.extend-ignore = ["F841", "E731"]
line-length = 100

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[lint.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[lint.isort]
line_length = 100
combine_as_imports = true
balanced_wrapping = true
lines_after_imports = 2
include_trailing_comma = true
multi_line_output = 5

[lint.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = false
ignore_missing_imports = true
